<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/customer_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:gravity="center"
                    android:hint="@string/enter_name"
                    android:textColorHint="#A2C1F6"
                    android:textColor="#275cba"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:autofillHints="@null"
                    android:inputType="text" />


            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@string/due_date"
                            android:textColor="#275cba"
                            android:textSize="16sp"
                            tools:ignore="TextViewEdits" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_weight=".5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="#275cba"
                            android:backgroundTint="@color/primaryColor"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/connected" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_weight=".5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="#275cba"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_pay" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="#275cba"
                            android:backgroundTint="@color/primaryColor"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="#275cba"
                            android:backgroundTint="@color/primaryColor"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="For the month of:" />
                    </LinearLayout>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="#275cba"
                            android:backgroundTint="@color/primaryColor"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/devices" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/due_date_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:textColor="@color/primaryColor"
                        android:backgroundTint="@color/primaryColor"
                        android:hint="@string/enter_a_number_for_the_due_date"
                        android:inputType="number"
                        android:textColorHint="#A2C1F6"
                        tools:ignore="Autofill,TextFields" />

                    <EditText
                        android:id="@+id/connected_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:textColor="@color/primaryColor"
                        android:hint="@string/total_person_to_connect"
                        android:textColorHint="#A2C1F6"
                        android:backgroundTint="@color/primaryColor"
                        android:inputType="number"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/to_pay_edit"
                        android:hint="@string/total_amount_to_pay"
                        android:textColor="@color/primaryColor"
                        android:textColorHint="#A2C1F6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:backgroundTint="@color/primaryColor"
                        android:inputType="number"
                        android:autofillHints="@null" />

                    <Spinner
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/status_edit"
                        android:textColorHint="#A2C1F6"
                        android:layout_weight=".5"
                        android:backgroundTint="@color/primaryColor"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/month_of_edit"
                        android:textColorHint="#A2C1F6"
                        android:layout_weight=".5"
                        android:backgroundTint="@color/primaryColor"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"/>


                    <EditText
                        android:id="@+id/devices_edit"
                        android:hint="@string/device_s_separate_w_comma"
                        android:textColorHint="#A2C1F6"
                        android:textColor="@color/primaryColor"
                        android:layout_weight=".5"
                        android:backgroundTint="@color/primaryColor"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:autofillHints="@null" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_gravity="center"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>